--- a/CTAnnotation/CTAnnotation.csproj
+++ b/CTAnnotation/CTAnnotation.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,6 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddLabelForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddLabelForm.Designer.cs">
+      <DependentUpon>AddLabelForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DicomAnnotator.cs" />
     <Compile Include="DicomLibrary.cs" />
     <Compile Include="Form1.cs">
@@ -61,8 +68,16 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="JSONHelper.cs" />
+    <Compile Include="Label.cs" />
+    <Compile Include="NonFocusButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddLabelForm.resx">
+      <DependentUpon>AddLabelForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
