--- a/CTAnnotation/CTAnnotation.csproj
+++ b/CTAnnotation/CTAnnotation.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IOHelper.cs" />
     <Compile Include="JSONHelper.cs" />
     <Compile Include="Label.cs" />
     <Compile Include="NonFocusButton.cs">
