--- a/CTAnnotation/CTAnnotation.csproj
+++ b/CTAnnotation/CTAnnotation.csproj
@@ -76,6 +76,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveData.cs" />
     <EmbeddedResource Include="AddLabelForm.resx">
       <DependentUpon>AddLabelForm.cs</DependentUpon>
     </EmbeddedResource>
